--- a/gemini-router.cabal
+++ b/gemini-router.cabal
@@ -19,6 +19,8 @@ library
   other-extensions:    FlexibleInstances
   build-depends:       base
                      , gemini-server
+                     , transformers
+                     , network-uri
   -- hs-source-dirs:
   default-language:    Haskell2010
 
