--- a/gemini-router.cabal
+++ b/gemini-router.cabal
@@ -22,10 +22,10 @@ library
   exposed-modules:     Network.Gemini.Router
   -- other-modules:
   other-extensions:    FlexibleInstances, CPP
-  build-depends:       base
-                     , gemini-server
-                     , transformers
-                     , network-uri
+  build-depends:       base ^>=4.13.0.0 || ^>=4.14.0.0
+                     , gemini-server ^>=0.1.0.0
+                     , transformers ^>=0.5.6.2
+                     , network-uri ^>=2.6.3.0 || ^>=2.7.0.0
   -- hs-source-dirs:
   default-language:    Haskell2010
 
