--- a/gemini-router.cabal
+++ b/gemini-router.cabal
@@ -26,7 +26,7 @@ library
   exposed-modules:     Network.Gemini.Router
   -- other-modules:
   other-extensions:    FlexibleInstances, CPP
-  build-depends:       base ^>=4.13.0.0 || ^>=4.14.0.0
+  build-depends:       base ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0
                      , gemini-server ^>=0.1.0.0
                      , transformers ^>=0.5.6.2
                      , network-uri ^>=2.6.3.0 || ^>=2.7.0.0
