--- a/gemini-router.cabal
+++ b/gemini-router.cabal
@@ -31,5 +31,6 @@ library
                      , transformers ^>=0.5.6.2
                      , network-uri ^>=2.6.3.0 || ^>=2.7.0.0
   -- hs-source-dirs:
+  ghc-options:         -Wall
   default-language:    Haskell2010
 
