--- a/gemini-router.cabal
+++ b/gemini-router.cabal
@@ -27,9 +27,10 @@ library
   -- other-modules:
   other-extensions:    FlexibleInstances, CPP
   build-depends:       base ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0
-                     , gemini-server ^>=0.1.0.0
+                     , gemini-server ^>=0.2.0.0
                      , transformers ^>=0.5.6.2
                      , network-uri ^>=2.6.3.0 || ^>=2.7.0.0
+                     , HsOpenSSL ^>=0.11.5.1
   -- hs-source-dirs:
   ghc-options:         -Wall
   default-language:    Haskell2010
