--- a/gemini-router.cabal
+++ b/gemini-router.cabal
@@ -26,8 +26,8 @@ library
   exposed-modules:     Network.Gemini.Router
   -- other-modules:
   other-extensions:    FlexibleInstances, CPP
-  build-depends:       base ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0
-                     , gemini-server ^>=0.2.0.0
+  build-depends:       base ^>=4.12.0.0 || ^>=4.13.0.0 || ^>=4.14.0.0 || ^>=4.15.0.0
+                     , gemini-server ^>=0.2.0.0 || ^>=0.3.0.0
                      , transformers ^>=0.5.6.2
                      , network-uri ^>=2.6.3.0 || ^>=2.7.0.0
                      , HsOpenSSL ^>=0.11.5.1
